# i3-dws

./: Cargo.toml  LICENSE  README.md
src/: main.rs
