[package]
name = "i3-dws"
version = "0.1.0"
edition = "2021"
authors = ["bzdula <bzdula@bzdulnet.pl"]
readme = "README.md"
keywords = ["i3","workspace"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i3ipc = { version = "0.10.1", features = ["i3-4-14"] }
anyhow = "1.0.58"
clap = { version = "3.2.5", features = ["derive"] }